--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     background-color:lightsalmon;
 }
 .inner-div{
-    width: 50vw;
+    width: 50%;
     
     background-color: yellowgreen;
     padding:30px 80px;
@@ -52,4 +52,21 @@ input{
     box-shadow: darkslategray;
     border-radius: 10px;
 }
+
+
+ @media only screen and (max-width : 916px) {
+    .inner-div{
+        width: 80%;
+        
+        background-color: yellowgreen;
+        padding:30px 50px;
+        
+        
+    }
+} 
+
+
+
+
+
 
